# bevy-egui-test

./: Cargo.toml  note.txt
src/: allocate.rs  main.rs
